--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,16 +12,19 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t ijse_ai_test:green .
-      - echo Tagging the previous green image as blue...
-      - docker tag ijse_ai_test:green 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue
+      - docker build -t ijse_ai_test .
+      - echo Tagging the current green image as blue...
+      - docker tag 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue
+      - echo Tagging the new Docker image as green...
+      - docker tag ijse_ai_test:latest 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
   post_build:
     commands:
-      - echo Pushing the Docker image to ECR...
-      - docker push 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
+      - echo Pushing the Docker image with blue tag to ECR...
       - docker push 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue
+      - echo Pushing the Docker image with green tag to ECR...
+      - docker push 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
       - echo Writing image definitions file...
-      - printf '[{"name":"mywebsite","imageUri":"%s"}]' 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue > imagedefinitions.json
+      - printf '[{"name":"mywebsite","imageUri":"%s"}]' 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green > imagedefinitions.json
 
 artifacts:
   files:
