--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,7 +16,7 @@ phases:
       - echo Tagging the current green image as blue...
       - docker tag 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue
       - echo Tagging the new Docker image as green...
-      - docker tag ijse_ai_test:latest 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
+      - docker tag ijse_ai_test:green 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
   post_build:
     commands:
       - echo Pushing the Docker image with blue tag to ECR...
