--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,10 +13,15 @@ phases:
     commands:
       - echo Building the Docker image...
       - docker build -t ijse_ai_test .
+      - echo Tagging the current green image as blue if it exists...
+      - docker pull 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green || true
+      - docker tag 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue || true
       - echo Tagging the Docker image as green...
       - docker tag ijse_ai_test:latest 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
   post_build:
     commands:
+      - echo Pushing the Docker image with blue tag to ECR if it exists...
+      - docker push 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:blue || true
       - echo Pushing the Docker image with green tag to ECR...
       - docker push 975050048882.dkr.ecr.ap-southeast-1.amazonaws.com/ijse_ai_test:green
       - echo Writing image definitions file...
